--- a/src/app/commande/pages/all-commandes/all-commandes.component.html
+++ b/src/app/commande/pages/all-commandes/all-commandes.component.html
@@ -1,4 +1,4 @@
-<div class="mes-commandes w-full">
+<div class="mes-commandes w-full overflow-y-scroll">
     <div class="list-produits text-3xl flex flex-col w-full mx-2">
         <div>Listes des Commandes</div>
         <div class="border-2 border-orange-500 w-full my-2"></div>
@@ -9,7 +9,7 @@
                 <label class="label-search-group" for="search-input">
                   Recherche
                 </label>
-                <input  #fNum type="text" id="search-input" placeholder="Entre Numero Commande" class="input-search-group">
+                <input (keyup)="filterNumero(fNum.value)"  #fNum type="text" id="search-input" placeholder="Entre Numero Commande" class="input-search-group">
             </div>
         </form>
         <div>
@@ -24,7 +24,7 @@
             </div>
             <div>
                 <form action="">
-                    <input #fDate class="btn border border-dark" type="date" name="" id="" placement="bottom" ngbTooltip="Filter Par date">  
+                    <input (change)="filterDate(fDate.value)" #fDate class="btn border border-dark" type="date" name="" id="" placement="bottom" ngbTooltip="Filter Par date">  
                 </form>
             </div>
         </div>
@@ -42,7 +42,7 @@
             </thead>
             <tbody>
                 <ng-container *ngIf="(commandes$|async) != null">
-                    <tr #tr *ngFor="let commande of (commandes$|async)|fitlterNum:fNum.value|fitlterDate:fDate.value">
+                    <tr #tr *ngFor="let commande of (commandes$|async)|fitlterDate:fDate.value">
                     <!-- <tr #tr *ngFor="let commande of (commandes$|async)|fitlterDate:fDate.value"> -->
                         <td><span class="etat text-light font-bold"  [ngClass]="{'bg-blue-500': filterVal == enCours,'bg-emerald-700': filterVal == termine,'bg-orange-600': filterVal == enCoursLivraison, 'bg-green-500': filterVal == valide, 'bg-red-500': filterVal == annule}">{{filterVal}}</span></td>
                         <td>{{commande.numero}}</td>
@@ -56,7 +56,7 @@
                                 <button (click)="changeEtat(commande.id,valide,tr)"  class="py-2 px-4 bg-primary text-light mx-2">Valider</button>
                             </ng-container>
                             <ng-container *ngIf="(filterVal == enCours && commande.zone != null)">
-                                <button (click)="changeEtat(commande.id,enCoursLivraison,tr)"  class="py-2 px-4 bg-primary text-light mx-2">En livraison</button>
+                                <button [routerLink]='["/admin/livraison"]'  class="py-2 px-4 bg-primary text-light mx-2">En livraison</button>
                             </ng-container>
                             <button (click)="charge(commande)"  class="py-2 px-4 bg-dark text-light mx-2" >Details</button>
                             <ng-container *ngIf="filterVal != valide && filterVal != annule">
@@ -75,12 +75,12 @@
             Pas de commande Disponnibles
         </div>
     </div>
-    <div class="paginate">
-        <mat-paginator [length]="(commandes$|async)?.length"
-              [pageSize]="8"
-              [pageSizeOptions]="[8]"
-              aria-label="Select page">
-        </mat-paginator>
+    <div class="paginate flex items-center h-16">
+        <button [disabled]="page==first" (click)="paginate('first')" class="flex cursor-pointer rounded-l-sm justify-center items-center w-20 h-8 text-white bg-gray-900">Premier</button>
+        <button [disabled]="page==first" (click)="paginate('previous')" class="flex cursor-pointer justify-center items-center w-20 h-8 text-white bg-gray-800">precedent</button>
+        <button class="flex cursor-pointer justify-center items-center w-20 h-8 text-white font-bold bg-gray-700">{{page}}</button>
+        <button [disabled]="page==last" (click)="paginate('next')" class="flex cursor-pointer justify-center items-center w-20 h-8 text-white bg-gray-800">suivant</button>
+        <button [disabled]="page==last" (click)="paginate('last')" class="flex cursor-pointer rounded-r-sm justify-center items-center w-20 h-8 text-white bg-gray-900">Derinier</button>
     </div>
     <ild-details [etat]="filterVal" [commandes]="detailsCommande"></ild-details>
 </div>
