--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -110,7 +110,8 @@
     top: 70px;
     right: 0.5%;
     margin: 3px 0;
-    z-index: 2;
+    z-index: 5;
+    cursor: pointer;
     width: 150px;
     height: 0px;
     transition: all ease 0.35s;
